--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "express": "^4.18.2",
     "fs-extra": "^11.1.0",
     "http-errors": "^2.0.0",
+    "image-to-base64": "^2.2.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "pdfmake": "^0.2.7",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
